@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.631 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.632 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -302,3 +302,10 @@ Changes from NetBSD 3.0 to NetBSD 4.0:
 		NTP API 4 nanokernel implementation. was expected after
 		4.0 but core@ voted for early import to facilitate early
 		testing and port conversion. simonb & [kardel 20060607]
+	Xen: Renamed kernel config files:
+		INSTALL_XEN3_U -> INSTALL_XEN3_DOMU
+		INSTALL_XENU   -> INSTALL_XEN2_DOMU
+		XEN0           -> XEN2_DOM0
+		XEN3_U         -> XEN3_DOMU
+		XENU           -> XEN2_DOMU
+		[hubertf 20060621]
